...
            android:fontFamily="sans-serif-medium"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:textColor="@color/primaryTextColor"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/fav_button"
            app:layout_constraintStart_toEndOf="@+id/film_poster"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/film_title" />

        <LinearLayout
            android:id="@+id/genre_linear_layout_box"
...
                app:layout_constraintTop_toBottomOf="@+id/film_title" />

        </LinearLayout>


        <ImageButton
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:background="@color/dark_gray"
            android:contentDescription="@string/add_fav_movie"
            android:padding="8dp"
...
